--- a/portfolio.html
+++ b/portfolio.html
@@ -6,24 +6,40 @@
 </head>
 <body>
   <header>
-      <div class="container">
+    <div class="container">
         <img src="/home/antonioal97/Documentos/Portifolio/style/logo/logovers2.png">
-      </div>
-        <nav id="menu_princ">
-          <table>
-            <tr>
-                HOME
-            </tr>
-            <tr>
-              GALERIA DE SERVIÇOS
-            </tr>
-            <tr>
-                CONTATO
-            </tr>
-          </table>
-        </nav>
-   </header>
+    </div>
+    <table class="responsive-table">
+            <thead>
+              <tr>
+                <th data-field="id">Principal</th>
+                <th data-field="name">Galeria</th>
+                <th data-field="price">Serviços</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Formações</td>
+                <td>Projetos consolidados</td>
+                <td>Experiências profissionais</td>
+              </tr>
+              <tr>
+                <td>...</td>
+                <td>....</td>
+                <td>....</td>
+              </tr>
+              <tr>
+                <td>Manutenção em hardware</td>
+                <td>Softwares (Aplicações WEB/Desktop</td>
+                <td>Android, Windows, Mac/IOS, Linux.</td>
+              </tr>
+            </tbody>
+    </table>
+  </header>
 
+
+
+   
    <div class="div_principal">
     <h1>Seja bem vindo a minha página pessoal</h1>
 
