Mudança na página de entrada.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 	<div class="container-fluid" >
 		<div id="header">
-
+			<button class="botao_topo" a href="/home/antonioal97/Documentos/Portifolio/portfolio.html">Conheça!</link></button>
 		</div>
 <!--Texto recepção-->
 		<div class="row" id="texto_1">
@@ -46,6 +46,7 @@
 <!--Texto recepção-->
 	
 		<footer id="footer">
+
 			<div class="row" id="texto_base">
 					<div class="midias_sociais">
 							<table class="social">	
