--- a/portfolio.html
+++ b/portfolio.html
@@ -1,58 +1,31 @@
-<html>
+<!DOCTYPE html>
+<html lang="pt-br">
 <head>
-<meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" a href="/home/antonioal97/Documentos/Portifolio/style/portfolio_style.css">
-<title>Portfólio</title>
+  <link rel="stylesheet" type="text/css" href="/home/antonioal97/Documentos/Portifolio/style/portfolio_style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Bootstrap -->
+  <link href="/home/antonioal97/Documentos/Portifolio/bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">	
+  <title>Portfolio</title>
 </head>
 <body>
-  <header>
-    <div class="container">
-        <img src="/home/antonioal97/Documentos/Portifolio/style/logo/logovers2.png">
-    </div>
-    <table class="responsive-table">
-            <thead>
-              <tr>
-                <th data-field="id">Principal</th>
-                <th data-field="name">Galeria</th>
-                <th data-field="price">Serviços</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>Formações</td>
-                <td>Projetos consolidados</td>
-                <td>Experiências profissionais</td>
-              </tr>
-              <tr>
-                <td>...</td>
-                <td>....</td>
-                <td>....</td>
-              </tr>
-              <tr>
-                <td>Manutenção em hardware</td>
-                <td>Softwares (Aplicações WEB/Desktop</td>
-                <td>Android, Windows, Mac/IOS, Linux.</td>
-              </tr>
-            </tbody>
-    </table>
-  </header>
+  <div class="container-fluid">
+    <header>
+        <div class="frase_efeito">
+          <h1 class="conteudoFrase_efeito">Olá, meu nome é Antônio & eu sou um</br>
+          Desenvolvedor!</h1>
+        </div>
+      <ul class="collection with-header">
+        <li class="collection-header"><h4>Inicio</h4></li>
+        <li class="collection-item">Contato</li>  
+        <li class="collection-item">Galeria</li>
+        <li class="collection-item">Sobre</li>
+      </ul>
+    </header>
 
-
-
-   
-   <div class="div_principal">
-    <h1>Seja bem vindo a minha página pessoal</h1>
-
-   </div>
-
-    
-   <footer>
-		Você está olhando para um trabalho
-		inteiramente desenvolvido por <b>Antônio Alberto Correa Junior</b>
-
-		<br>
-		<a href="/home/antonioal97/Documentos/Portifolio/portfolio.html" >
-			Entre e surpreenda-se </p>
-	</footer>
+  </div>
 </body>
 </html>
