mudancas nos nomes de ids e classes

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 	
 		<footer id="footer">
 
-			<div class="row" id="texto_base">
-					<div class="midias_sociais">
-							<table class="social">	
+			<div class="row" id="divFooter">
+					<div class="divMidiaSociais">
+							<table class="tabelaMidiaSociais">	
 								<tr	>
 									<td>				
 											<a href="https://www.facebook.com/profile.php?id=100007562955556">
@@ -87,10 +87,12 @@
 							</table>
 					</div>
 				<div class="col-xs-1-12">
-					<br>
-					<i class="fa fa-copyright" aria-hidden="true">Desenvolvido por: Antônio Alberto Correa Junior</i>
-					<br>
-					<i class="fa fa-copyright" aria-hidden="true">Contato:<br>e-mail: antonioalb97@gmail.com<br>WhatsApp: +55 (13) 9 9624-5335</i>				
+					Desenvolvido por: Antônio Alberto Correa Junior
+					
+					Contato:
+					e-mail: antonioalb97@gmail.com
+
+					WhatsApp: +55 (13) 9 9624-5335				
 				</div>
 			</div>
 		</footer>
