--- a/index.html
+++ b/index.html
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
-<meta charset="utf-8">
-<link rel="stylesheet" type="text/css" href="/home/antonioal97/Documentos/Portifolio/_css/style.css">
-<title>Bem vindo ao meu portfólio on-line</title>
-
+    <meta charset="utf-8">
+    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="_css/estilo.css">
 </head>
 <body>
-<div id="interface">
-    <header>
-        [INSERIR NOME DO SITE]
+<header>
+    <nav id="menu">
         <ul>
-            <li>Início</li>
+            <li><a href="index.html">Inicio</a></li>
             <li>Contato</li>
-            <li>Sobre</li>       
-            <li>Code</li> 
+            <li>Sobre</li>
         </ul>
-    </header>
-    
-    <!--A IMAGEM VAI COMEÇAR AQUI-->
+    </nav>
+</header>
 
-    <hgroup>
-        <h1>Olá, eu sou o Antônio Alberto</h1>
-        <h2>& eu sou um</h2>
-        <h1>Desenvolvedor!</h1>
+
+<div id="frente-site">
+    <hgroup id="boas-vindas">
+        <h2>Meu nome é Antônio Alberto</h2>
+        <h3>& eu sou um</h3>
+        <h1>Desenvolvedor!</br>
+        Bem vindo ao meu site pessoal</h1>
     </hgroup>
-
-    <!--A IMAGEM VAI TERMINAR AQUI-->
-
 </div>
-<body>
+<p>Quer conhecer mais sobre meus serviços? Clique em um dos links abaixo!
+</p>
+
+
+</body>
 </html>
