mudanca de interface e cores

--- a/index.html
+++ b/index.html
@@ -15,19 +15,27 @@
             <li><a href="index.html">Inicio</a></li>
             <li>Contato</li>
             <li>Sobre</li>
+            <li>Bio</li>
         </ul>
     </nav>
 </header>
 
 
+
 <div id="frente-site">
     <hgroup id="boas-vindas">
-        <h2>Meu nome é Antônio Alberto</h2>
-        <h3>& eu sou um</h3>
-        <h1>Desenvolvedor!</br>
-        Bem vindo ao meu site pessoal</h1>
+        <h5>Bem vindo ao meu site pessoal</h5>
+        <h3>Meu nome é </h3>
+    </br>
+        <h1>Antônio Alberto</h1>
+    </br>
+        <h4>& eu sou um</h4>
+        <h1>Desenvolvedor!</h1>        
 	</hgroup>
 </div>
+
+<img src="_imagens/img-sentado-pq.png">
+
 <p>Quer conhecer mais sobre meus serviços? Clique em um dos links abaixo!
 </p>
 
