--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <div class="interface">
+    <!--Cabeçalho da página-->
 <header>
 	
     <nav id="menu">
@@ -20,19 +21,29 @@
     </nav>
 </header>
 
+    <!--Cabeçalho da página-->
+<hgroup id="boas-vindas">
+    <h5>Bem vindo ao meu site pessoal</h5>
+    <h3>Meu nome é </h3>
+</br>
+    <h1>Antônio Alberto</h1>
+</br>
+    <h4>& eu sou um</h4>
+    <h1>Desenvolvedor!</h1>        
+</hgroup>
 
-
-<div id="frente-site">
-    <hgroup id="boas-vindas">
-        <h5>Bem vindo ao meu site pessoal</h5>
-        <h3>Meu nome é </h3>
-    </br>
-        <h1>Antônio Alberto</h1>
-    </br>
-        <h4>& eu sou um</h4>
-        <h1>Desenvolvedor!</h1>        
-	</hgroup>
+<div class="box-text">
+    <p>Conheça meus serviços!</p>
 </div>
+
+<div class="box-text1">
+    <p>Artigos</p>
+</div>
+
+<div class="box-text2">
+    <p>Códigos</p>
+</div>
+
 
 <img src="_imagens/img-sentado-pq.png">
 
