--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="_css/estilo.css">
 </head>
 <body>
+<div class="contra-interface"></div>
 <div class="interface">
     <!--Cabeçalho da página-->
 <header>
