--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <title>Antônio Alberto</title>
 </head>
 <body>
-<div class="container-fluid">
-<header>
+<header id=cabecalho>
     <nav id="menu">
     <ul>
         <li>Inicio</li>
@@ -20,6 +19,7 @@
     </ul>
     </nav>
 </header>
+<div class="interface">
 
 
 
