--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <link rel="stylesheet" href="_css/estilo.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Antônio Alberto</title>
+    <title>Antônio Alberto</title
 </head>
 <body>
 <header id=cabecalho>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0099ff" fill-opacity="1" d="M0,160L60,144C120,128,240,96,360,112C480,128,600,192,720,229.3C840,267,960,277,1080,266.7C1200,256,1320,224,1380,208L1440,192L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z"></path></svg>
     <nav id="menu">
     <ul>
         <li>Inicio</li>
@@ -20,7 +21,6 @@
     </nav>
 </header>
 <div class="interface">
-
 
 
 
