--- a/index.html
+++ b/index.html
@@ -1,62 +1,19 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="utf-8">
-    <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="_css/estilo.css">
-</head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>antonioal97</title>
+    <link rel="stylesheet" type="text/css" href="bootstrap-3.3.7-dist/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="_css/estilo.css"> <!--background e tags básicas-->
+    <link rel="stylesheet" type="text/css" href="_css/menu.css"> <!--Somente edição do menu-->
+</head> 
+
 <body>
-<div class="interface">
-    <!--Cabeçalho da página-->
-<header>
-    <nav id="menu">
-        <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li>Contato</li>
-            <li>Sobre</li>
-            <li>Bio</li>
-        </ul>
-    </nav>
-</header>
-    <!--Cabeçalho da página-->
-<!--
-<hgroup id="boas-vindas">
-    <h5>Bem vindo ao meu site pessoal</h5>
-    <h3>Meu nome é </h3>
-    </br>
-    <h1>Antônio Alberto</h1>
-    </br>
-    <h4>& eu sou um</h4>
-    <h1>Desenvolvedor!</h1>        
-</hgroup>
--->
-
-<div class="row">
-    <div class="column">
-        <div class="card">
-            <h4>Antônio Alberto</h4><br>
-            <h5>Estudante de Análise e Desenvolvimento de sistemas</br>
-                Técnico em Instrumentação Industrial pela ETEC</br>
-
-            </h5>
-        </div>
-    </div>
-<!--
-    <div class="column">
-            <div class="card"></div>
-    </div>
-    <div class="column">
-            <div class="card"></div>
-    </div>-->
-</div>
 
 
-<img src="_imagens/img-sentado-pq.png">
+    
 
-<p>Quer conhecer mais sobre meus serviços? Clique em um dos links abaixo!
-</p>
-
-</div>
 </body>
 </html>
