--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!--<link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.css">-->
     <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.css">
     <link rel="stylesheet" href="_css/estilo.css">
+    <link rel="stylesheet" href="_css/template.css">
 </head>
 <body>
 <header id=cabecalho>
@@ -31,8 +32,18 @@
                 </hgroup>
             </section>
         </div>
+            <div class="row">
+                <div class="col-xs-1-12">
+                <div id="template">
+                    <hgroup>
+                        <h1>Bem <br>vindos<br></h1>
+                        <h2>Este é o meu site!</h2>
+                    </hgroup>
+                </div>
+            </div>
+        </div>
         <div class="col-xs-1-12">
-            <aside>
+            <aside id="">
                 <hgroup>
                     <h2>Este é o ASIDE do site</h2>
                     <h5>Toda informação secundária vai ficar aqui</h5>
