--- a/index.html
+++ b/index.html
@@ -10,58 +10,58 @@
     <link rel="stylesheet" href="_css/estilo.css">
     <link rel="stylesheet" href="_css/template.css">
 </head>
+
 <body>
-<header id=cabecalho>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0099ff" fill-opacity="1" d="M0,160L60,144C120,128,240,96,360,112C480,128,600,192,720,229.3C840,267,960,277,1080,266.7C1200,256,1320,224,1380,208L1440,192L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z"></path></svg>
-    <nav id="menu">
-    <ul>
-        <li>Inicio</li>
-        <li>Contato</li>
-        <li>Sobre</li>
-        <li>Bio</li>
-    </ul>
-    </nav>
-</header>
-<div class="container">
-    <div class="row">
-        <div class="col-xs-1-12">
-            <section>
-                <hgroup>
-                    <h1>Este é o SECTION do site</h1>
-                    <h4>Toda informação importante vai ficar aqui</h4>
-                </hgroup>
-            </section>
-        </div>
-            <div class="row">
-                <div class="col-xs-1-12">
-                <div id="template">
+    <header id="cabecalho">
+        <nav id="menu">
+            <ul>
+                <li>Inicio</li>
+                <li>Contato</li>
+                <li>Sobre</li>
+                <li>Bio</li>
+            </ul>
+        </nav>
+    </header>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-1-12">
+                <section>
                     <hgroup>
-                        <h1>Bem <br>vindos<br></h1>
-                        <h2>Este é o meu site!</h2>
+                        <h1>Este é o SECTION do site</h1>
+                        <h4>Toda informação importante vai ficar aqui</h4>
                     </hgroup>
+                </section>
+            </div>
+                <div class="row">
+                    <div class="col-xs-1-12">
+                    <div id="template">
+                        <hgroup>
+                            <h1>Bem <br>vindos<br></h1>
+                            <h2>Este é o meu site!</h2>
+                        </hgroup>
+                        </div>
+                    </div>
                 </div>
             </div>
+            <div class="col-xs-1-12">
+                <aside id="">
+                    <hgroup>
+                        <h2>Este é o ASIDE do site</h2>
+                        <h5>Toda informação secundária vai ficar aqui</h5>
+                    </hgroup>
+                </aside>
+            </div>
+            <div class="col-xs-1-12">
+                <footer>
+                    <hgroup>
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0099ff" fill-opacity="1" d="M0,160L60,144C120,128,240,96,360,112C480,128,600,192,720,229.3C840,267,960,277,1080,266.7C1200,256,1320,224,1380,208L1440,192L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z"></path></svg>
+                        <h3>Este é o FOOTER do site</h3>
+                        <p><b>As informações finais vão ficar aqui</b></p>
+                    </hgroup>
+                </footer>
+            </div>
         </div>
-        <div class="col-xs-1-12">
-            <aside id="">
-                <hgroup>
-                    <h2>Este é o ASIDE do site</h2>
-                    <h5>Toda informação secundária vai ficar aqui</h5>
-                </hgroup>
-            </aside>
-        </div>
-        <div class="col-xs-1-12">
-            <footer>
-                <hgroup>
-                    <h3>Este é o FOOTER do site</h3>
-                    <p><b>As informações finais vão ficar aqui</b></p>
-                </hgroup>
-            </footer>
-        </div>
-
-
     </div>
-
-
 </body>
+
 </html>
