--- a/index.html
+++ b/index.html
@@ -4,133 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Antônio Alberto</title>
-    <!--<link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.css">-->
-    <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.css">
-    <link rel="stylesheet" href="_css/estilo.css">
-    <link rel="stylesheet" href="_css/template.css">
+    <link rel="stylesheet" href="_css/menu.css">
+    <title>@antonioal97</title>
 </head>
-<<<<<<< HEAD
-    <body>
-        <header id=cabecalho>
-            <nav id="menu">
-                <ul>
-                    <li>Inicio</li>
-                    <li>Contato</li>
-                    <li>Sobre</li>
-                    <li>Bio</li>
-                </ul>
-            </nav>
-        </header>
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-1-12">
-                    <section>
-                        <hgroup>
-                            <h1>Este é o SECTION do site</h1>
-                            <h4>Toda informação importante vai ficar aqui</h4>
-                        </hgroup>
-                    </section>
-                </div>
-=======
-
 <body>
-    <header id="cabecalho">
-        <nav id="menu">
+    <header>
+        <input type="checkbox" id="btn-menu">           <!--Cria uma chekbox-->
+        <label for="btn-menu">&#9776</label>            <!--Cria um hamburger que quando clicado, aciona a checkbox-->
+        <nav class="menu">
             <ul>
-                <li>Inicio</li>
-                <li>Contato</li>
-                <li>Sobre</li>
-                <li>Bio</li>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Portfólio</a></li>
+                <li><a href="#">Contato</a></li>
+                <li><a href="#">Sobre</a></li>
             </ul>
         </nav>
     </header>
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-1-12">
-                <section>
-                    <hgroup>
-                        <h1>Este é o SECTION do site</h1>
-                        <h4>Toda informação importante vai ficar aqui</h4>
-                    </hgroup>
-                </section>
-            </div>
-                <div class="row">
-                    <div class="col-xs-1-12">
-                    <div id="template">
-                        <hgroup>
-                            <h1>Bem <br>vindos<br></h1>
-                            <h2>Este é o meu site!</h2>
-                        </hgroup>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-1-12">
-                <aside id="">
-                    <hgroup>
-                        <h2>Este é o ASIDE do site</h2>
-                        <h5>Toda informação secundária vai ficar aqui</h5>
-                    </hgroup>
-                </aside>
-            </div>
-            <div class="col-xs-1-12">
-                <footer>
-                    <hgroup>
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0099ff" fill-opacity="1" d="M0,160L60,144C120,128,240,96,360,112C480,128,600,192,720,229.3C840,267,960,277,1080,266.7C1200,256,1320,224,1380,208L1440,192L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z"></path></svg>
-                        <h3>Este é o FOOTER do site</h3>
-                        <p><b>As informações finais vão ficar aqui</b></p>
-                    </hgroup>
-                </footer>
-            </div>
-        </div>
-<<<<<<< HEAD
-    </div>
-=======
-        <div class="col-xs-1-12">
-            <footer>
-                <hgroup>
-                    <h3>Este é o FOOTER do site</h3>
-                    <p><b>As informações finais vão ficar aqui</b></p>
-                </hgroup>
-            </footer>
-        </div>
->>>>>>> 4c6ea8c57af2c8bd32fdedee1b8577bb8b71ec45
->>>>>>> e2ab163ecbe5dd1c2438cc965b0d5a6ba0158f28
 
-                <div class="col-xs-1-12">
-                    <aside>
-                        <hgroup>
-                            <h2>Este é o ASIDE do site</h2>
-                            <h5>Toda informação secundária vai ficar aqui</h5>
-                        </hgroup>
-                    </aside>
-                </div>
-
-<<<<<<< HEAD
-                <div class="col-xs-1-12">
-                    <footer>
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0099ff" fill-opacity="1" d="M0,160L60,144C120,128,240,96,360,112C480,128,600,192,720,229.3C840,267,960,277,1080,266.7C1200,256,1320,224,1380,208L1440,192L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z"></path></svg>                    
-                        <hgroup>
-                            <h3>Este é o FOOTER do site</h3>
-                            <p><b>As informações finais vão ficar aqui</b></p>
-                        </hgroup>
-                    </footer>
-                </div>
-            </div>
-        </div>   
-    </body>
-=======
-<<<<<<< HEAD
-
-    
-=======
-    </div>
-
->>>>>>> 4c6ea8c57af2c8bd32fdedee1b8577bb8b71ec45
-
->>>>>>> 8af7950079b3dab8bab51d80e89d8e1496a1ff89
 </body>
-
->>>>>>> e2ab163ecbe5dd1c2438cc965b0d5a6ba0158f28
 </html>
