--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="_css/menu.css">
+    <link rel="stylesheet" href="_css/template.css">
     <title>@antonioal97</title>
 </head>
 <body>
@@ -21,5 +22,8 @@
         </nav>
     </header>
 
+    <section class="container-section"></section>
+    <section class="container-section"></section>
+    <section class="container-section"></section>
 </body>
 </html>
