--- a/index.html
+++ b/index.html
@@ -4,22 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="_css/menu.css">
     <title>@antonioal97</title>
+    <link rel="stylesheet" type="text/css" href="_css/estilo.css"> <!--CSS da página-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"> <!--Pacote de icones em fontes-->
 </head>
 <body>
     <header>
-        <input type="checkbox" id="btn-menu">           <!--Cria uma chekbox-->
-        <label for="btn-menu">&#9776</label>            <!--Cria um hamburger que quando clicado, aciona a checkbox-->
-        <nav class="menu">
-            <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Portfólio</a></li>
-                <li><a href="#">Contato</a></li>
-                <li><a href="#">Sobre</a></li>
-            </ul>
+        <nav>
+            <input id="menu-hamburguer" type="checkbox">
+            <label for="menu-hamburguer">
+                <ul>
+                    <span class="hamburguer"></span>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </label>
+            <div class="midias-sociais">
+                <ul id="midias-sociais">
+                    <i>Mídias Sociais</i>
+                    <li><a href="https://www.facebook.com/profile.php?id=100007562955556" target="_blank" rel="rel=noopener"><i class="fa fa-facebook-square"></i></a></li>
+                    <li><a href="https://www.instagram.com/antonioal97/?hl=pt-br" target="_blank" rel="rel=noopener"><i class="fa fa-instagram"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/ant%C3%B4nio-alberto-aa8501185/" target="_blank" rel="rel=noopener"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a href="https://github.com/antonioal97" target="_blank" rel="rel=noopener"><i class="fa fa-github"></i></a></li>
+                    <li><a href="https://web.whatsapp.com/" target="_blank" rel="rel=noopener"><i class="fa fa-whatsapp"></i></a></li>
+                </ul>
+            </div>
         </nav>
     </header>
-
+    <script>
+        var usuario = {
+            nome: 'Antônio',
+            idade: 22,
+            sexo: 'M',
+            human: true,
+            working: true,
+            locate: 'Jacupiranga-SP'
+        };
+        console.log(usuario);
+    </script>
 </body>
 </html>
