--- a/index.html
+++ b/index.html
@@ -25,5 +25,9 @@
     <section class="container-section"></section>
     <section class="container-section"></section>
     <section class="container-section"></section>
+
+    <footer>
+        <a href="card-informativo.html">
+    </footer>
 </body>
 </html>
