--- a/index.html
+++ b/index.html
@@ -31,33 +31,45 @@
             </div>
     </header>
     <div class="container">
-        <main>
-            <section id="home">
-                <hgroup>
-                    <h1>Nesta "section"</h1>
-                    <h3>Fica a home do site, a página inicial</h3>
-                </hgroup>
-            </br>
-            </section>
-            <section id="sobre">
-                <hgroup>
-                    <h1>Nesta section</h1>
-                    <h3>Fica a página "sobre", onde vai conter o meu curriculo</h3>
-                    <h5>Aqui, será necessário um card, com uma breve apresentação minha</h5>
-                    <h6>...</h6>
-                </hgroup>
-            </br>
-            </section>
-            <section id="contato">
-                <hgroup>
-                    <h1>Nesta section, ficaram meus dados para contato</h1>
-                    <h3>E uma area para envio de e-mails</h3>
-                </hgroup>
-            </br>
-            </section>
-            <footer>
-                <h1>Este é o footer do site <br><h5>Antônio Alberto &copy   </h5>;</h1>
-            </footer>
+        <div>
+            <div class="container">
+                <section id="home">
+                        <hgroup>
+                            <h1>Nesta "section"</h1>
+                            <h3>Fica a home do site, a página inicial</h3>
+                        </hgroup>
+                </br>
+                </section>
+            </div>
+            
+            <div class="container">
+                <section id="sobre">
+                    <hgroup>
+                        <h1>Nesta section</h1>
+                        <h3>Fica a página "sobre", onde vai conter o meu curriculo</h3>
+                        <h5>Aqui, será necessário um card, com uma breve apresentação minha</h5>
+                        <h6>...</h6>
+                    </hgroup>
+                </br>
+                </section>
+            </div>
+            
+            <div class="container">
+                <section id="contato">
+                    <hgroup>
+                        <h1>Nesta section, ficaram meus dados para contato</h1>
+                        <h3>E uma area para envio de e-mails</h3>
+                    </hgroup>
+                </br>
+                </section>
+            </div>
+
+            <div class="container">
+                <footer>
+                    <h1>Este é o footer do site <br><h5>Antônio Alberto &copy   </h5>
+                    </h1>
+                </footer>
+            </div>
         </main>
     </div>
     <script>
