--- a/index.html
+++ b/index.html
@@ -65,9 +65,10 @@
             </div>
 
             <div class="container">
-                <footer>
-                    <h1>Este é o footer do site <br><h5>Antônio Alberto &copy   </h5>
-                    </h1>
+                <footer class="rodape">
+                    <h1>Este é o footer do site</h1>
+                        <br>
+                    <h5>Antônio Alberto &copy</h5>
                 </footer>
             </div>
         </main>
