--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
                                     </figcaption>
                                 </figure>
                                 <article>
-                                    <h4>Antônio Alberto</h4>
-                                    <h5>Técnico em Instrumentação Industrial [ETEC]</h5>
-                                    <br>
-                                    <h5>Estudante de Análise e Desenvolvimento de Sistemas pela UNIVR</h5>
+                                    <hgroup>
+                                        <h4>Antônio Alberto</h4>
+                                        <h5>Técnico em Instrumentação Industrial [ETEC]</h5>
+                                        <br>
+                                        <h5>Estudante de Análise e Desenvolvimento de Sistemas pela UNIVR</h5>
+                                    </hgroup>
                                 </article>
                                 <br/>
                                 <br/>
