--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="_css/estilo.css">
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <div class="container"> <!--Este primeiro container, serve para englobar apenas o header do site, que contem o menu de navegação para os elementos internos-->
